Get Google Map Api From Appsetting

--- a/ContactManager/appsettings.Development.json
+++ b/ContactManager/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     // "SQLDB": "Data Source=.\\SQLEXPRESS;Initial Catalog=ContactManager;Integrated Security=true;TrustServerCertificate=True;",
     "SQLDB": "Data Source=124.29.248.66,1521;User ID=Aleem;Password=St@ndardit5;Initial Catalog=TestDB;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  },
+  "Setting": {
+    "GoogleMapAPI": "AIzaSyC5N8RM2dWX4-wTYXpDNdWBGIFL_0dzI4g"
   }
 }
